# ckanext-qdes-schema

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ckanext/qdes_schema/: auth.py  blueprint.py  cli.py  constants.py  dataqld_dataset.json  helpers.py  jobs.py  model.py  plugin.py  plugin_resources.py  qdes_ckan_dataset.json  qdes_dataservice.json  qdes_presets.json  qdes_series.json  qld_cdp_dataset.json  qspatial_dataset.json  sir_dataset.json  validators.py
ckanext/qdes_schema/assets/: autocomplete.js  calculated_quality_measure.js  dataset_no_resource.js  qdes-tree-selector.js  repeating-fields.js  style.css  temporal-coverage.css  temporal-coverage.js
ckanext/qdes_schema/assets/spatial/: spatial_map_input.css  spatial_map_input.js
ckanext/qdes_schema/dcat/: profiles.py
ckanext/qdes_schema/fanstatic/: accordion.js  autocomplete.js  calculated_quality_measure.js  dataservice.js  dataset_no_resource.js  help-text.js  input-date-helper.js  iso-8601-duration.js  jquery.fancytree-all-deps.min.js  publish.js  q_des.css  qdes-tree-selector.js  repeating-fields.js  spinner.js  style.css  temporal-coverage.css  temporal-coverage.js  webassets.yml
ckanext/qdes_schema/logic/action/: create.py  delete.py  get.py  update.py
ckanext/qdes_schema/logic/helpers/: dataservice_helpers.py  dataset_helpers.py  harvest_helpers.py  indexing_helpers.py  relationship_helpers.py  resource_helpers.py
ckanext/qdes_schema/migration/qdes_schema/: alembic.ini
ckanext/qdes_schema/qld_harverst/: import.py
ckanext/qdes_schema/qld_harvest/: DES_Datasets_Open_data_V1.csv  DES_Datasets_Open_data_v2.csv  Harvest List FINAL.csv  README.md  dataset.csv  errors.json  helpers.py  import.py
ckanext/qdes_schema/qspatial_harvest/: DES_Datasets_QSpatial_v1.csv  DES_Datasets_QSpatial_v2.csv  README.md  error.csv  harvest_xml.py  import_xml.py  purge_datasets.py  qspatial_object.py  temporal_dates_fix.py
ckanext/qdes_schema/qspatial_harvest/xml_files/: README
ckanext/qdes_schema/templates/: base.html
ckanext/qdes_schema/templates/admin/: config.html
ckanext/qdes_schema/templates/group/: read.html
ckanext/qdes_schema/templates/macros/: qdes_form.html
ckanext/qdes_schema/templates/organization/: read.html
(+92 files in other folders)
