[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan
	
[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/qdes-schema/i18n/ckanext-qdes-schema.pot
width = 80

[init_catalog]
domain = ckanext-qdes-schema
input_file = ckanext/qdes-schema/i18n/ckanext-qdes-schema.pot
output_dir = ckanext/qdes-schema/i18n

[update_catalog]
domain = ckanext-qdes-schema
input_file = ckanext/qdes-schema/i18n/ckanext-qdes-schema.pot
output_dir = ckanext/qdes-schema/i18n
previous = true

[compile_catalog]
domain = ckanext-qdes-schema
directory = ckanext/qdes-schema/i18n
statistics = true